Fixing z-index of the drawers

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -3,7 +3,7 @@
 	height: 100%;
 	width: 300px;
 	background-color: #fff;
-	z-index: 9999;
+	z-index: 999999;
 	padding: 1rem;
 	box-shadow: 0 0 10px 10px #0001;
 	padding-top: 2.6rem;
